--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Jeff Thomas</title>
-    <meta name="description" content="Portfolio Page">
-  </head>
-  <body>
-    <h1>Works</h1>
-  </body>  
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Portfolio Website">
+        <meta name="author" content="Jeff Thomas">
+        <link rel="icon" href="images/Jeff.png">
+        <title>Jeff Thomas</title>
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    </head>
+    <body>
+    </body>
 </html>
